--- a/examples/1.html
+++ b/examples/1.html
@@ -14,7 +14,7 @@
     </div>
     
     <script src="../src/skrollr-colors.js"></script>
-    <script src=http://prinzhorn.github.io/skrollr/dist/skrollr.min.js"></script>
+    <script src="https://prinzhorn.github.io/skrollr/dist/skrollr.min.js"></script>
     <script>
       // Start skrollr
       var s = skrollr.init();
