--- a/examples/1.html
+++ b/examples/1.html
@@ -5,6 +5,24 @@
   </head>
   <body>
   
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    SPACER<br />
+    
     <div 
       data-0="background-color: #000;" 
       data-400="background-color: hsl(100,80%,90%,1);"
