--- a/examples/1.html
+++ b/examples/1.html
@@ -5,23 +5,16 @@
   </head>
   <body>
   
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
-    SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
+    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
     
     <div 
       data-0="background-color: #000;" 
