--- a/examples/1.html
+++ b/examples/1.html
@@ -12,14 +12,11 @@
     SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
     SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
     SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
-    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
-    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
-    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
     
     <div 
       data-0="background-color: #000;" 
-      data-400="background-color: hsl(100,80%,90%,1);"
-      data-top="background-color: rgba(255,255,255,1);"
+      data-200="background-color: hsl(100,80%,90%,1);"
+      data-400="background-color: rgba(255,255,255,1);"
     >
       WHOOT
     </div>
