--- a/examples/1.html
+++ b/examples/1.html
@@ -11,18 +11,13 @@
     SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
     SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
     SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
-    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
-    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
-    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
-    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
-    SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />SPACER<br />
-    
+ 
     <div 
-      data-0="background-color: #000;" 
-      data-200="background-color: hsl(100,80%,90%,1);"
-      data-400="background-color: rgba(255,255,255,1);"
-    >
-      WHOOT
+    data-0="background-color: #FFF000;" 
+    data-500="background-color: rgba(255,255,255,1);" 
+    class="skrollable skrollable-between" 
+    style="background-color: rgb(0, 0, 255);">
+      WHOOOT
     </div>
     
     <script src="../src/skrollr-colors.js"></script>
