--- a/examples/1.html
+++ b/examples/1.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang=en>
   <head>
+  
     <title>Example 1</title>
+    <meta charset="utf-8">
+    
   </head>
   <body>
   
@@ -25,6 +28,5 @@
       var s = skrollr.init();
     </script>
     
-  
   </body>
 </html>
